2004-12-23  Alexandre Oliva  <aoliva@redhat.com>

	PR target/16819
	* calls.c (load_register_parameters): Don't call use_regs when
	nregs is zero.

2004-12-22  Richard Henderson  <rth@redhat.com>

	PR target/19102
	* config/i386/i386.c (x86_inter_unit_moves): Disable.
	(ix86_hard_regno_mode_ok): Disallow SSE2 and MMX scalar modes
	in SSE registers when only SSE1 enabled.

2004-12-21  David O'Brien  <obrien@FreeBSD.org>

	Backport from mainline:
	* config/freebsd-spec.h:  Use KSE pthread lib for -pthread.

2004-12-19  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_hard_regno_mode_ok): Always accept all SSE,
	MMX, 3DNOW modes in SSE registers; always accept all MMX, 3DNOW modes
	in MMX registers.
	* config/i386/i386.h (VALID_SSE2_REG_MODE): Don't include
	VALID_MMX_REG_MODE.
	* config/i386/i386.md (movv4sf_internal, movv4si_internal, 
	movv2di_internal, movv2si_internal, movv4hi_internal,
	movv2sf_internal, movv2df_internal, movv8hi_internal,
	movv16qi_internal, movti_internal): Add leading '*' to name.
	(movv2di_internal, movv2df_internal, movv8hi_internal,
	movv16qi_internal, movv2df, movv8hi, movv16qi, movv2di,
	pushv2di, pushv8hi, pushv16qi): Enable for SSE1.
	(movv2si_internal, movv4hi_internal): Add SSE alternatives.
	(movv8qi_internal, movv2sf_internal): Likewise.
	(movtf): Simplify conditional.
	(movv2sf, pushv2sf): Enable for MMX.

2004-12-19  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/19068
	* expr.c (expand_expr_real_1) <MAX_EXPR>: Ensure that target, op0
	and op1 are all registers (or constants) before expanding the RTL
	comparison sequence [to avoid reg_overlap_mentioned (target, op1)].

2004-12-18  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/16968
	* loop.c (scan_loop): Stop scanning the loop for movable
	insns as soon as an optimization barrier is encountered.

2004-12-16  H.J. Lu  <hongjiu.lu@intel.com>

	PR other/18508
	* config/alpha/t-osf4 (SHLIB_LINK): Use `.backup' as the suffix